[metadata]
name = po-language-server
version = attr: po_lsp.__version__
description = Language Server for gettext po files.
author = Julien Palard
author_email = julien@palard.fr
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
py_modules = po_lsp
python_requires = >= 3.6
install_requires =
  pygls

[options.entry_points]
console_scripts = po-langage-server=po_lsp:main
