[metadata]
name = po-language-server
version = attr: po_lsp.__version__
description = Language Server for gettext po files.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
license = MIT License
classifiers =
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
py_modules = po_lsp
python_requires = >= 3.6
install_requires =
  pygls

[options.entry_points]
console_scripts = po-language-server=po_lsp:main
